2004-04-09  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-do-copy-or-rename-file-via-buffer): Set
	permissions of the new file.
	(tramp-handle-file-local-copy, tramp-handle-write-region): The
	permissions of the temporary file are set if filename exists.
	Reported by Ted Stern <stern@cray.com>.

2004-04-07  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* tramp.el (tramp-open-connection-setup-interactive-shell):
	Revert weird EOL setting for first stty command (change from
	2004-03-30).

2004-04-02  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-handle-insert-directory): Properly quote file
	name also if not full-directory-p.  Handle wildcard case.
	Reported by Andreas Schwab <schwab@suse.de>.

2004-03-30  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* tramp.el (tramp-open-connection-setup-interactive-shell):
	First stty command needs weird EOL setting -- it is for setting
	EOL setting...  Due to the weird EOL, we might receive garbage
	from the remote end which b0rks the next command.  So we add a
	placeholder command for this.

2004-03-28  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* tramp.el (tramp-process-initial-commands): Avoid liveness check
	on shell -- we know that it must be alive since we're opening a
	connection at this moment.
	(tramp-last-cmd): New internal variable.
	(tramp-process-echoes): New tunable.
	(tramp-send-command): Set tramp-last-cmd.
	(tramp-wait-for-output): Delete echo, if applicable.

2004-03-21  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-touch): FILE can be a local file, too.
	(TODO): Remove items done.

2004-03-14  Michael Albinus  <Michael.Albinus@alcatel.de>

	* Makefile.in: New environment variables $(CONTRIB_FILES) and
	$(INSTALL_FILES).  Don't check for $(USE_CONTRIB) any longer.
	(all): Depends on $(CONTRIB_FILES), too.
	(install): Copy $(INSTALL_FILES) but $?.
	(distclean): Remove also $(CONTRIB_FILES).
	
2004-03-13  Kai Grossjohann  <kgrossjo@eu.uu.net>
